# ascot-benchmark

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
ascot/: __init__.py  __main__.py  cli.py  graders.py  inspect.py  models.py  publish.py  report.py  runner.py  store.py  suite.py  verifiers.py  workspace.py
docs/: MYSQL_PUBLISH.md  YAML_FORMAT.md
examples/pdf-reading/.opencode/skills/pdf-reader/: SKILL.md
examples/pdf-reading/.opencode/skills/pdf-reader/scripts/: pdf_to_text.py
examples/simple-suite/skills/hello/: SKILL.md
examples/testcases/: hello-tests.yaml  pdf-read-cases-std.yaml  pdf-read-cases.yaml
examples/testcases/verifiers/: test_greeting_json.py  test_greetings_for_names.py  test_hello_file.py  test_page_count.py  test_pages.py
tests/: test_cli.py  test_graders.py  test_graders_test_script.py  test_models.py  test_publish.py  test_report.py  test_runner.py  test_store.py  test_suite.py  test_verifiers.py  test_workspace.py
