[project]
name = "ascot"
version = "0.2.0"
description = "Benchmark framework for evaluating OpenCode suites"
requires-python = ">=3.10"
dependencies = [
    "py-opencode-wrapper",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ascot = "ascot.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ascot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
